# libmcfp

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  changelog
.github/workflows/: build-documentation.yml  cmake-multi-platform.yml
cmake/: libcfpConfig.cmake  libcfpConfig.cmake.in  mcfp-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  docutils.conf  index.rst  installation.md  requirements.in  requirements.txt  synopsis.md  usage.md
examples/: CMakeLists.txt  example.cpp
include/: cfg.hpp
include/cfg/: text.hpp  utilities.hpp
include/cfp/: cfp.hpp  text.hpp  utilities.hpp
include/mcfp/: error.hpp  mcfp.hpp  text.hpp  utilities.hpp
include/mcfp/detail/: charconv.hpp  options.hpp
modules/: mcfp-config.ixx  mcfp-error.ixx  mcfp-options.ixx  mcfp-text.ixx  mcfp-utilities.ixx  mcfp.ixx
test/: CMakeLists.txt  unit-test.conf  unit-test.cpp
